Bug 1620240 - Use a data attribute for displaying the completion text instead of the title in the editor. r=gl.
There are no good reason this should be set on the title element.
Furthermore the title attribute triggers displaying a tooltip, which
might look odd and cause issue.

Differential Revision: https://phabricator.services.mozilla.com/D66733

UltraBlame original commit: 55ba6b244beb0de1776cc4aa4d926d7542b77a3d

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -484,7 +484,7 @@ html #webconsole-notificationbox {
 }
 
 .webconsole-app .cm-auto-complete-shadow-text::after {
-  content: attr(title);
+  content: attr(data-completion);
   color: var(--theme-comment);
   
   
